--- a/style_v8.css
+++ b/style_v8.css
@@ -39,8 +39,7 @@ body {
 
 
 
-
-/********************* Media Queries ********************/
+/********************* Media Queries *********************/
 
 /*XS Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) {
